# riscv-vp-plusplus-ipu

sw/simple-ipu/: Makefile  ipu  ipu.c  ipu.h  ipu_C_ref
sw/simple-ipu-hw/: Makefile  canny  filter.c  filter.h  jku100x70_001_edges.pgm  jku100x70_002_edges.pgm  jku100x70_003_edges.pgm  main.c
vp/: CMakeLists.txt
vp/src/platform/basic/: CMakeLists.txt  camera.h  ipu.cpp  ipu.h  main.cpp
